--- a/app/app/views/currency-converter.html
+++ b/app/app/views/currency-converter.html
@@ -1,1 +1,51 @@
-<p>This is the currency-converter view.</p>
+
+<div ng-controller="CurrencyConverterCtrl">
+<!-- enter the amount for the currency being changed-->
+<h4>Initial Currency</h4>
+<input type="text" ng-model="initCur" placeholder=" $ ...">
+<div class="dropdown btn">
+
+
+
+
+  <div id="collectiondropDown" class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" >
+    <span>{{ selCurrency1 }}</span>
+<b class="caret"></b>
+  </div>
+
+  <ul id="dropDownUL1" class="dropdown-menu pull-left" role="menu" aria-labelledby="dLabel">
+    <li ng-click="OnItemClick1('American')"> American </li>
+    <li ng-click="OnItemClick1('Greek')"> Greek </li>
+    <li ng-click="OnItemClick1('Mexican')"> Mexican </li>
+    <li ng-click="OnItemClick1('Philippines')"> Philippines </li>
+    <li ng-click="OnItemClick1('Canadian')"> Canadian </li>
+  </ul>
+</div>
+<hr/>
+	
+
+	<h4>Exchange Currency</h4>
+
+	<!-- http://stackoverflow.com/a/16487228 -->
+	<!-- Changed the id -->
+<div class="dropdown btn">
+  <div id="collectiondropDown2" class="dropdown-toggle" id="dLabel2" role="button" data-toggle="dropdown" data-target="#" >
+    <span>{{ selCurrency2 }}</span>
+<b class="caret"></b>
+  </div>
+
+  <ul id="dropDownUL2" class="dropdown-menu pull-left" role="menu" aria-labelledby="dLabel">
+    <li ng-click="OnItemClick2('American')"> American </li>
+    <li ng-click="OnItemClick2('Greek')"> Greek </li>
+    <li ng-click="OnItemClick2('Mexican')"> Mexican </li>
+    <li ng-click="OnItemClick2('Philippines')"> Philippines </li>
+    <li ng-click="OnItemClick2('Canadian')"> Canadian </li>
+  </ul>
+</div>
+ <hr>
+ 
+ <button ng-click='exchangeIt()'> Exchange </button></a>
+ <h4>{{ Exchanged }}</h4>
+
+ 
+</div>
