updated tip calculator

--- a/app/app/views/split-bill.html
+++ b/app/app/views/split-bill.html
@@ -33,7 +33,12 @@
     <hr/>
     <h3> Total: $ {{sumOfValues}} </h3>
     <h3>{{result}}</h3>
-    <hr/>
+    <hr>
     <button ng-click='calculate()'>Calculate</button></a>
-  <hr>
+    <p>iidejeij</p>
+    <p>iidejeij</p>
+    <p>iidejeij</p>
+    <p>iidejeij</p>
+    <p>iidejeij</p>
+    <p>iidejeij</p>
 </div>
