--- a/app/.tmp/styles/main.css
+++ b/app/.tmp/styles/main.css
@@ -77,3 +77,26 @@ body {
     border-bottom: 0;
   }
 }
+
+.footer {
+  background-color: white;
+}
+
+.hoverNav:hover, .hoverNav:active {
+  opacity: .5;
+}
+
+.navbar-header {
+  width:100%;
+  color: white;
+  background-color: #2c3e50;
+}
+
+body { 
+  padding-top: 50px; 
+  margin-left: 10px; 
+  margin-right: 10px;
+}
+
+
+
