--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -78,12 +78,17 @@ body {
   }
 }
 
-.footer {
-  background-color: white;
+.navText {
+  color: white;
+  font-size: 7px;
+}
+
+.hoverNav {
+  opacity: .5;
 }
 
 .hoverNav:hover, .hoverNav:active {
-  opacity: .5;
+  opacity: 1;
 }
 
 .navbar-header {
@@ -93,10 +98,81 @@ body {
 }
 
 body { 
-  padding-top: 50px; 
+  padding-top: 30px; 
+  margin-bottom: 70px;
   margin-left: 10px; 
+}
+
+.navbar-inverse {
+  background: #a9a9a9;
+  padding-top: 10px;
+  padding-bottom:10px;
+}
+
+.btn-primary {
+  height: 60px;
+  width: 340px;
+  font-size: 30px;
+  color: white;
+}
+
+input[type="text"]{ 
+  border: 1px solid #ccc; 
+  padding-left: 10px;
+  height: 25px; 
+  width: 130px;  
+} 
+
+.navBorder [class^="col-"] {
+  border-right: 1px solid white;
+}
+
+select {
+  border: 1px solid #111;
+  background: transparent;
+  width: 120px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  height: 30px;
+  margin-right: 10px;
+} 
+
+.appTitle img {
+  float: right;
+  width: 50px;
+  height: 50px;
   margin-right: 10px;
 }
 
+.appTitle h2 {
+  padding-top: 13px;
+  padding-bottom: 10px;
+  position: relative;
+  color: #909090;
+}
 
+.sections h4 {
+  margin-left: -10px;
+  padding: 12px 12px 12px 12px;
+  background-color: #dddcdc;
+  color: #6c6d70;
+}
 
+.addIconCenter {
+  margin-left: 40px;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  background-color: #2c3e50;
+  width: 95%;
+  height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 6px solid #2c3e50;
+}
