--- a/app/app/views/split-bill.html
+++ b/app/app/views/split-bill.html
@@ -1,44 +1,46 @@
 <div ng-controller="SplitBillCtrl">
+    <div class="appTitle">
+        <img src="images/split-bill.svg" width="50" height="50">
+        <h2>SPLIT BILL</h2>
+    </div>
 
-	<h4>Select the number of roommates:</h4>
-    <input type="text" ng-model="numOfRoommates" placeholder="# of Roommates">
-    <hr/>
-	<h4>Select bill you wish to add:</h4>
-	<ol>
-	   	<li ng-repeat="item in addItem">
-      	<div>
-          <div style="display:inline">
+	<div class="sections">
+        <h4>Number of roommates</h4>
+    </div>
+
+    <select ng-model="opt" ng-options="roommate.label for roommate in roommates" ng-change="change(opt)">
+    </select>
+
+    <div class="sections">
+    	<h4>Select bill you wish to add</h4>
+    </div>
+
+	<div ng-repeat="item in addItem">
+        <div style="display:inline">
             <span>
-        	    <select>
+                <select>
         	    	<option ng-model="select-bill"> Select bill </option>
-					    	<option ng-model="rent"> Rent </option>
-					    	<option ng-model="hydro"> Hydro </option>
-					    	<option ng-model="internet"> Internet </option>
-					    	<option ng-model="cable"> Cable </option>
-					    	<option ng-model="utilities"> Utilities </option>
-					    	<option ng-model="other"> Other </option>
-					    </select>
+					<option ng-model="rent"> Rent </option>
+			    	<option ng-model="hydro"> Hydro </option>
+			    	<option ng-model="internet"> Internet </option>
+					<option ng-model="cable"> Cable </option>
+			    	<option ng-model="utilities"> Utilities </option>
+			    	<option ng-model="other"> Other </option>
+				</select>
             </span>
-          </div>
+        </div>
 
-	            <input type="text" ng-change="onchange($event, item)" ng-model="item.billAmount" placeholder=" $ ...">
-	            <span ng-hide="item.length == 1">
-	                <a ng-click="addItem.splice($index, 1)"><img src="images/remove.svg" height="30" width="30">Remove</a> <br><br>
-	            </span>
-	        </div>
-     	</li>
-    </ol>
+        <input type="text" ng-change="onchange($event, item)" ng-model="item.billAmount" placeholder=" $ ______">
 
-    <a href ng-click="newItem($event)"><img src="images/add.svg" height="30" width="30">Add</a>
-    <hr/>
+        <span ng-hide="item.length == 1">
+            <a ng-click="addItem.splice($index, 1)"><img src="images/remove.svg" height="30" width="30"></a><br><br>
+        </span>
+    </div>
+    <div class="addIconCenter">
+    <a href ng-click="newItem($event)"><img src="images/add.svg" height="30" width="30"></a> </div>
+
     <h3> Total: $ {{sumOfValues}} </h3>
     <h3>{{result}}</h3>
-    <hr>
-    <button ng-click='calculate()'>Calculate</button></a>
-    <p>iidejeij</p>
-    <p>iidejeij</p>
-    <p>iidejeij</p>
-    <p>iidejeij</p>
-    <p>iidejeij</p>
-    <p>iidejeij</p>
+
+    <button class="btn btn-primary" ng-click='calculate()'>CALCULATE</button></a>
 </div>
