--- a/app/app/views/home.html
+++ b/app/app/views/home.html
@@ -1,2 +1,7 @@
-<img src="images/homepageLogo.png" height="375" width="250">
-<h4> hehehe </h4>
+<div class="homelogo">
+  <img src="images/homepageLogo.png" height="375" width="250">
+</div>
+
+<div class="appstatement">                                                         
+  <p> Calculate your bills, tips and currencies on the go! </p>
+</div>
