--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -1,4 +1,6 @@
 /* Space out content a bit */
+
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -169,3 +171,16 @@ input[type="range"]::-webkit-slider-thumb {
 @-webkit-keyframes fwd-in {from{-webkit-transform: translate3d(100%, 0, 0);}to{-webkit-transform: translate3d(0, 0, 0);}}
 /* PANNING FORWARD OLD SCREEN SLIDES OUT */
 @-webkit-keyframes back-in {from{-webkit-transform: translate3d(-100%, 0, 0);}to{-webkit-transform: translate3d(0, 0, 0);}}
+
+.homelogo
+
+.appstatement {
+  text-align:center;
+  margin-top:10%;
+  font-size:10;
+}
+
+.homelogo {
+  text-align:center;
+  margin-top:10%;
+}
