--- a/app/app/views/home.html
+++ b/app/app/views/home.html
@@ -1,7 +1,5 @@
 <div class="homelogo">
-  <img src="images/homepageLogo.png" height="375" width="250">
+  <img src="images/homepageLogo.png" height="500" width="333">
 </div>
 
-<div class="appstatement">                                                         
-  <p> Calculate your bills, tips and currencies on the go! </p>
-</div>
+<p class="appstatement">CALCULATE YOUR BILLS, TIPS & CURRENCIES ON THE GO!</p>
