--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -172,15 +172,15 @@ input[type="range"]::-webkit-slider-thumb {
 /* PANNING FORWARD OLD SCREEN SLIDES OUT */
 @-webkit-keyframes back-in {from{-webkit-transform: translate3d(-100%, 0, 0);}to{-webkit-transform: translate3d(0, 0, 0);}}
 
-.homelogo
-
 .appstatement {
   text-align:center;
-  margin-top:10%;
-  font-size:10;
+  /*margin-top:10%; */
+  font-size:1.5rem;
+  font-family: 'Fjalla One', sans-serif;
 }
 
 .homelogo {
   text-align:center;
-  margin-top:10%;
+  margin-top:15%;
+  margin-left: -10px;
 }
