--- a/app/app/views/home.html
+++ b/app/app/views/home.html
@@ -1,5 +1,9 @@
 <div class="homelogo">
-  <img src="images/homepageLogo.png" height="500" width="333">
+  <img src="images/homepageLogo.png" height="300" width="250">
 </div>
 
+<p class="logotitle">HALLOUMI</p>
+
 <p class="appstatement">CALCULATE YOUR BILLS, TIPS & CURRENCIES ON THE GO!</p>
+
+<p class="splash">#SPLASH</p>
