--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -173,14 +173,38 @@ input[type="range"]::-webkit-slider-thumb {
 @-webkit-keyframes back-in {from{-webkit-transform: translate3d(-100%, 0, 0);}to{-webkit-transform: translate3d(0, 0, 0);}}
 
 .appstatement {
-  text-align:center;
+  text-align: center;
   /*margin-top:10%; */
-  font-size:1.5rem;
+  font-size: 1.5rem;
   font-family: 'Fjalla One', sans-serif;
+  color: #2c3e50;
+}
+
+.logotitle {
+  text-align: center;
+  /*margin-top:10%; */
+  font-size: 8.25rem;
+  font-family: 'Fjalla One', sans-serif;
+  text-decoration: underline;
+  margin-bottom: -1.25rem;
+  color: #2c3e50;
+}
+
+.splash {
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: 'Fjalla One', sans-serif;
+  color: #2c3e50;
+  opacity: .25;
+  margin-top: -.75rem;
+}
+
+.appstatement.logotitle {
+/*  color: #2c3e50;*/
 }
 
 .homelogo {
-  text-align:center;
-  margin-top:15%;
+  text-align: center;
+  margin-top: 15%;
   margin-left: -10px;
 }
