--- a/app/app/views/home.html
+++ b/app/app/views/home.html
@@ -4,6 +4,6 @@
 
 <p class="logotitle">HALLOUMI</p>
 
-<p class="appstatement">CALCULATE YOUR BILLS, TIPS & CURRENCIES ON THE GO!</p>
+<p class="appstatement">CALCULATE YOUR BILLS, TIPS &amp; CURRENCIES ON THE GO!</p>
 
 <p class="splash">#SPLASH</p>
