--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -1,6 +1,4 @@
 /* Space out content a bit */
-
-
 body {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -172,18 +170,43 @@ input[type="range"]::-webkit-slider-thumb {
 /* PANNING FORWARD OLD SCREEN SLIDES OUT */
 @-webkit-keyframes back-in {from{-webkit-transform: translate3d(-100%, 0, 0);}to{-webkit-transform: translate3d(0, 0, 0);}}
 
+.dropdown{
+  height: 25px; 
+  width: 130px;  
+  background: white;
+  border: 1px solid #ccc; 
+  padding-left:25px;
+  padding-bottom:25px;
+  padding-right:0px;
+  float:left;
+}
+
+.dropdown-menu li{
+padding-left:25px;
+}
+
+.result h4{
+margin-top:15px;
+margin-left:150px;
+} 
+
+div.row :target{
+opacity:1;
+}
+
 .appstatement {
   text-align: center;
   /*margin-top:10%; */
   font-size: 1.5rem;
   font-family: 'Fjalla One', sans-serif;
   color: #2c3e50;
+  margin-right: 9px;
 }
 
 .logotitle {
   text-align: center;
   /*margin-top:10%; */
-  font-size: 8.25rem;
+  font-size: 6rem;
   font-family: 'Fjalla One', sans-serif;
   text-decoration: underline;
   margin-bottom: -1.25rem;
@@ -197,10 +220,6 @@ input[type="range"]::-webkit-slider-thumb {
   color: #2c3e50;
   opacity: .25;
   margin-top: -.75rem;
-}
-
-.appstatement.logotitle {
-/*  color: #2c3e50;*/
 }
 
 .homelogo {
