--- a/app/app/views/split-bill.html
+++ b/app/app/views/split-bill.html
@@ -30,7 +30,7 @@
             </span>
         </div>
 
-        <input type="text" ng-change="onchange($event, item)" ng-model="item.billAmount" placeholder=" $ ______">
+        <input type="number" ng-change="onchange($event, item)" ng-model="item.billAmount" placeholder=" $ ______">
 
         <span ng-hide="item.length == 1">
             <a ng-click="addItem.splice($index, 1)"><img src="images/remove.svg" height="30" width="30"></a><br><br>
