--- a/app/app/views/currency-converter.html
+++ b/app/app/views/currency-converter.html
@@ -20,7 +20,7 @@
 			<li ng-click="OnItemClick1('American')"> USD - American </li>
 			<li ng-click="OnItemClick1('Greek')"> EUR - Greek </li>
 			<li ng-click="OnItemClick1('Mexican')"> MEX - Mexican </li>
-			<li ng-click="OnItemClick1('Philippines')"> PHP Philippines </li>
+			<li ng-click="OnItemClick1('Philippines')"> PHP - Philippines </li>
 			<li ng-click="OnItemClick1('Canadian')"> CAN - Canadian </li>
 		</ul>
     </div>	
